Miscellaneous/Dumps/testing-volumes-with-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bb
  name: bb
spec:
  containers:
  - image: busybox
    name: bb
    command:
    - /bin/sh
    - -c
    - sleep 9999999

    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
